# phi

./: .gitignore  CMakeLists.txt  Makefile  README.md  lexer.c  lexer.h  parser.c  parser.h  tokens.c  tokens.h
src/: ast.c  ast.h  binaryops.c  binaryops.h  codegen.c  codegen.h  lexer.c  lexer.h  lexer.l  llvmcontrol.c  llvmcontrol.h  main.c  parser.c  parser.h  parser.y  stack.c  stack.h  templating.c  templating.h
